@startuml

title __CREATORS's Class Diagram__\n

  package sase.sase.evaluation {
    package sase.sase.evaluation.tree {
      package sase.sase.evaluation.tree.creators {
        class CostAwareTree {
            + root : Node
            + cost : Double
            + CostAwareTree()
        }
      }
    }
  }
  

  package sase.sase.evaluation {
    package sase.sase.evaluation.tree {
      package sase.sase.evaluation.tree.creators {
        class OrderedZStreamTreeTopologyCreator {
            {static} - orderingAlgorithmType : OrderingAlgorithmTypes
            - orderingAlgorithm : IOrderingAlgorithm
            + OrderedZStreamTreeTopologyCreator()
            - createOrderCostModel()
            + createTreeTopology()
        }
      }
    }
  }
  

  package sase.sase.evaluation {
    package sase.sase.evaluation.tree {
      package sase.sase.evaluation.tree.creators {
        class SelingerTreeTopologyCreator {
            + createTreeTopology()
            + createTreeTopology()
            - preprocessSubtrees()
            - isConflictingSubset()
            - intersectWithoutContainment()
            - getComplement()
        }
      }
    }
  }
  

  package sase.sase.evaluation {
    package sase.sase.evaluation.tree {
      package sase.sase.evaluation.tree.creators {
        class TrivialTreeTopologyCreator {
            + createTreeTopology()
        }
      }
    }
  }
  

  package sase.sase.evaluation {
    package sase.sase.evaluation.tree {
      package sase.sase.evaluation.tree.creators {
        class ZStreamTreeTopologyCreator {
            # createTreeTopologyByLeavesOrder()
            + createTreeTopology()
        }
      }
    }
  }
  

  OrderedZStreamTreeTopologyCreator -up-|> ITreeTopologyCreator
  SelingerTreeTopologyCreator -up-|> IIncrementalTreeTopologyCreator
  TrivialTreeTopologyCreator -up-|> ITreeTopologyCreator
  ZStreamTreeTopologyCreator -up-|> ITreeTopologyCreator


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
